<resources>
    <string name="app_name">Planet Info</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_back_button">Back</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="about">About this application</string>
    <string name="app_description">This application is made by Joel Hagenblad, an interaction design student at MAH, Sweden. This app was created as part of a school project. All information given within this app is gathered from Wikipedia.</string>
    <string name="mercury_info">Mercury is the smallest and closest to the Sun of the eight planets in the Solar System, with an orbital period of about 88 Earth days. Seen from Earth, it appears to move around its orbit in about 116 days, which is much faster than any other planet in the Solar System. It has no known natural satellites. The planet is named after the Roman deity Mercury, the messenger to the gods.
                                Because it has almost no atmosphere to retain heat, Mercurys surface experiences the greatest temperature variation of the planets in the Solar System, ranging from 100 K (−173 °C; −280 °F) at night to 700 K (427 °C; 800 °F) during the day at some equatorial regions. The poles are constantly below 180 K (−93 °C; −136 °F). Mercurys axis has the smallest tilt of any of the Solar Systems planets (about 1⁄30 of a degree), but it has the largest orbital eccentricity. At aphelion, Mercury is about 1.5 times as far from the Sun as it is at perihelion. Mercurys surface is heavily cratered and similar in appearance to the Moon, indicating that it has been geologically inactive for billions of years.
                                Mercury is gravitationally locked and rotates in a way that is unique in the Solar System. As seen relative to the fixed stars, it rotates on its axis exactly three times for every two revolutions it makes around the Sun. As seen from the Sun, in a frame of reference that rotates with the orbital motion, it appears to rotate only once every two Mercurian years. An observer on Mercury would therefore see only one day every two years.</string>
    <string name="venus_info">Venus is the second planet from the Sun, orbiting it every 224.7 Earth days. It has no natural satellite. It is named after the Roman goddess of love and beauty. After the Moon, it is the brightest natural object in the night sky, reaching an apparent magnitude of −4.6, bright enough to cast shadows. Because Venus is an inferior planet from Earth, it never appears to venture far from the Sun: its elongation reaches a maximum of 47.8°.
                              Venus is a terrestrial planet and is sometimes called Earths "sister planet" because of their similar size, mass, proximity to the Sun and bulk composition. It is radically different from Earth in other respects. It has the densest atmosphere of the four terrestrial planets, consisting of more than 96% carbon dioxide. The atmospheric pressure at the planets surface is 92 times that of Earths. With a mean surface temperature of 735 K (462 °C; 863 °F), Venus is by far the hottest planet in the Solar System, even though Mercury is closer to the Sun. Venus has no carbon cycle that puts carbon into rock, nor does it seem to have any organic life to absorb carbon in biomass. Venus is shrouded by an opaque layer of highly reflective clouds of sulfuric acid, preventing its surface from being seen from space in visible light. It may have possessed oceans in the past, but these would have vaporized as the temperature rose due to a runaway greenhouse effect. The water has most probably photodissociated, and, because of the lack of a planetary magnetic field, the free hydrogen has been swept into interplanetary space by the solar wind. Venuss surface is a dry desertscape interspersed with slab-like rocks and periodically refreshed by volcanism.</string>
    <string name="earth_info">Earth, also called the world and, less frequently, Gaia (and Terra in some works of science fiction) is the third planet from the Sun, the densest planet in the Solar System, the largest of the Solar Systems four terrestrial planets, and the only astronomical object known to accommodate life. The earliest life on Earth arose at least 3.5 billion years ago. Earths biodiversity has expanded continually except when interrupted by mass extinctions. Although scholars estimate that over 99 percent of all species that ever lived on the planet are extinct, Earth is currently home to 10–14 million species of life, including over 7.3 billion humans who depend upon its biosphere and minerals. Earths human population is divided among about two hundred sovereign states which interact through diplomacy, conflict, travel, trade and communication media.
                              According to evidence from radiometric dating and other sources, Earth was formed around four and a half billion years ago. Within its first billion years, life appeared in its oceans and began to affect its atmosphere and surface, promoting the proliferation of aerobic as well as anaerobic organisms and causing the formation of the atmospheres ozone layer. This layer and the geomagnetic field blocked the most life-threatening parts of the Suns radiation, so life was able to flourish on land as well as in water. Since then, the combination of Earths distance from the Sun, its physical properties and its geological history have allowed life to thrive and evolve.
                              Earths lithosphere is divided into several rigid tectonic plates that migrate across the surface over periods of many millions of years. Seventy-one percent of Earths surface is covered with water, with the remainder consisting of continents and islands that together have many lakes and other sources of water that contribute to the hydrosphere. Earths poles are mostly covered with ice that includes the solid ice of the Antarctic ice sheet and the sea ice of the polar ice packs. Earths interior remains active with a solid iron inner core, a liquid outer core that generates the magnetic field, and a thick layer of relatively solid mantle.
                              Earth gravitationally interacts with other objects in space, especially the Sun and the Moon. During one orbit around the Sun, Earth rotates about its own axis 366.26 times, creating 365.26 solar days or one sidereal year. Earths axis of rotation is tilted 23.4° away from the perpendicular of its orbital plane, producing seasonal variations on the planets surface with a period of one tropical year (365.24 solar days). The Moon is Earths only natural satellite. It began orbiting Earth about 4.53 billion years ago. The Moons gravitational interaction with Earth stimulates ocean tides, stabilizes the axial tilt and gradually slows the planets rotation.</string>
    <string name="mars_info">Mars is the fourth planet from the Sun and the second smallest planet in the Solar System, after Mercury. Named after the Roman god of war, it is often referred to as the "Red Planet" because the iron oxide prevalent on its surface gives it a reddish appearance. Mars is a terrestrial planet with a thin atmosphere, having surface features reminiscent both of the impact craters of the Moon and the volcanoes, valleys, deserts, and polar ice caps of Earth. The rotational period and seasonal cycles of Mars are likewise similar to those of Earth, as is the tilt that produces the seasons. Mars is the site of Olympus Mons, the largest volcano and second-highest known mountain in the Solar System, and of Valles Marineris, one of the largest canyons in the Solar System. The smooth Borealis basin in the northern hemisphere covers 40% of the planet and may be a giant impact feature. Mars has two moons, Phobos and Deimos, which are small and irregularly shaped. These may be captured asteroids, similar to 5261 Eureka, a Mars trojan.
                             Until the first successful Mars flyby in 1965 by Mariner 4, many speculated about the presence of liquid water on the planets surface. This was based on observed periodic variations in light and dark patches, particularly in the polar latitudes, which appeared to be seas and continents; long, dark striations were interpreted by some as irrigation channels for liquid water. These straight line features were later explained as optical illusions, though geological evidence gathered by unmanned missions suggests that Mars once had large-scale water coverage on its surface at some earlier stage of its life. In 2005, radar data revealed the presence of large quantities of water ice at the poles and at mid-latitudes. The Mars rover Spirit sampled chemical compounds containing water molecules in March 2007. The Phoenix lander directly sampled water ice in shallow Martian soil on July 31, 2008.
                             Mars is host to seven functioning spacecraft: five in orbit—2001 Mars Odyssey, Mars Express, Mars Reconnaissance Orbiter, MAVEN and Mars Orbiter Mission—and two on the surface—Mars Exploration Rover Opportunity and the Mars Science Laboratory Curiosity. Defunct spacecraft on the surface include MER-A Spirit and several other inert landers and rovers such as the Phoenix lander, which completed its mission in 2008. Observations by the Mars Reconnaissance Orbiter have revealed possible flowing water during the warmest months on Mars. In 2013, NASAs Curiosity rover discovered that Marss soil contains between 1.5% and 3% water by mass (about two pints of water per cubic foot or 33 liters per cubic meter, albeit attached to other compounds and thus not freely accessible).
                             Mars can easily be seen from Earth with the naked eye, as can its reddish coloring. Its apparent magnitude reaches −3.0, which is surpassed only by Jupiter, Venus, the Moon, and the Sun. Optical ground-based telescopes are typically limited to resolving features about 300 kilometers (190 mi) across when Earth and Mars are closest because of Earths atmosphere.</string>
</resources>