<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.joelhenning.assignment_4.GridFragment"
    android:id="@+id/planetGridFragment"
    android:background="#000000"
    >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="2"
        android:rowCount="4"
        android:useDefaultMargins="false"
        >

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginLeft="36dp"
            >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mercury"
            android:id="@+id/mercuryButton"
            android:onClick="getNewFragment"
            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/mercury"
             android:textColor="#ffffff"
             android:layout_gravity="bottom"
             android:textSize="16dp"
             android:paddingLeft="16dp"
             android:paddingBottom="8dp"
             android:background="#99000000"
             />
        </FrameLayout>

        <FrameLayout
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_marginLeft="32dp"
            >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/venus"
            android:id="@+id/venusButton"
            android:onClick="getNewFragment"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/venus"
                android:textColor="#ffffff"
                android:layout_gravity="bottom"
                android:textSize="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:background="#99000000"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginLeft="36dp"
            >
        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/earth"
            android:id="@+id/earthButton"
            android:onClick="getNewFragment"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/earth"
                android:textColor="#ffffff"
                android:layout_gravity="bottom"
                android:textSize="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:background="#99000000"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_marginLeft="32dp"
            >
        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/mars"
            android:id="@+id/marsButton"
            android:onClick="getNewFragment"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mars"
                android:textColor="#ffffff"
                android:layout_gravity="bottom"
                android:textSize="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:background="#99000000"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_marginLeft="36dp"
            >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/jupiter"
            android:id="@+id/jupiterButton"
            android:onClick="getNewFragment"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/jupiter"
                android:textColor="#ffffff"
                android:layout_gravity="bottom"
                android:textSize="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:background="#99000000"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_marginLeft="32dp"
            >
        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/saturn"
            android:id="@+id/saturnButton"
            android:onClick="getNewFragment"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturn"
                android:textColor="#ffffff"
                android:layout_gravity="bottom"
                android:textSize="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:background="#99000000"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_marginLeft="36dp"
            >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/uranus"
            android:id="@+id/uranusButton"
            android:onClick="getNewFragment"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/uranus"
                android:textColor="#ffffff"
                android:layout_gravity="bottom"
                android:textSize="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:background="#99000000"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_marginLeft="32dp"
            >
        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/neptune"
            android:id="@+id/neptuneButton"
            android:onClick="getNewFragment"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/neptune"
                android:textColor="#ffffff"
                android:layout_gravity="bottom"
                android:textSize="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:background="#99000000"
                />
        </FrameLayout>

        </GridLayout>

</FrameLayout>
